demux: avformat: pass options to input (fix #4419)